--- a/transformer/build.gradle
+++ b/transformer/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
+group = 'org.eclipse.transformer'
 version = '0.1.0-SNAPSHOT'
 
 configurations {
@@ -65,4 +66,14 @@ tasks.register('showArchives') {
 tasks.register('downloadArchives', Copy) {
   into project.layout.buildDirectory.dir('archives')
   from configurations.archive
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+	  artifactId = 'transformer'
+	  from components.java
+
+	}
+  }
 }
